crates/musli-zerocopy/tests/ui/deny_uninhabitable_enum_error.stderr
error[E0084]: unsupported representation for zero-variant enum
 --> tests/ui/deny_uninhabitable_enum_error.rs:4:1
  |
4 | #[repr(u8)]
  | ^^^^^^^^^^^
5 | enum Uninhabitable {}
  | ------------------ zero-variant enum

warning: unreachable expression
 --> tests/ui/deny_uninhabitable_enum_error.rs:3:41
  |
3 | #[derive(Debug, Clone, Copy, PartialEq, ZeroCopy)]
  |                                         ^^^^^^^^
  |                                         |
  |                                         unreachable expression
  |                                         any code following this `match` expression is unreachable, as all arms diverge
  |
  = note: `#[warn(unreachable_code)]` on by default
  = note: this warning originates in the derive macro `ZeroCopy` (in Nightly builds, run with -Z macro-backtrace for more info)
